# dmml-web

./: .gitignore  README.md  contest.js  dmml-01.ipynb  dmml-02.ipynb  dmml-03.ipynb  dmml-04.ipynb  dmml-05.ipynb  dmml-06.ipynb  dmml-07.ipynb  dmml-09.ipynb  dmml-10.ipynb  dmml-hw-01.ipynb  dmml-hw-02.ipynb  dmml-hw-03.ipynb  dmml-hw-04.ipynb  dmml-hw-05.ipynb  dmml-hw-06.ipynb  dmml-ohw-05.ipynb  index.html  leaderboard.html  pyproject.toml  styles.css  visualizations.html
.github/workflows/: deploy.yml
docs/: index.html  leaderboard.html  visualizations.html  visualizations.js
notebooks/: dmml-01.html  dmml-01.ipynb  dmml-01.qmd  dmml-02.html  dmml-02.ipynb  dmml-02.qmd  dmml-03.html  dmml-03.ipynb  dmml-03.qmd  dmml-04.html  dmml-04.ipynb  dmml-04.qmd  dmml-05.html  dmml-05.ipynb  dmml-05.qmd  dmml-06.html  dmml-06.ipynb  dmml-06.qmd  dmml-07.qmd  dmml-09-dashboard.qmd  dmml-09.qmd  dmml-10.qmd  dmml-hw-01.html  dmml-hw-01.ipynb  dmml-hw-01.qmd  dmml-hw-02.html  dmml-hw-02.ipynb  dmml-hw-02.qmd  dmml-hw-03.html  dmml-hw-03.ipynb  dmml-hw-03.qmd  dmml-hw-04.html  dmml-hw-04.ipynb  dmml-hw-04.qmd  dmml-hw-05.html  dmml-hw-05.ipynb  dmml-hw-05.qmd  dmml-hw-06-guidance.py  dmml-hw-06.html  dmml-hw-06.ipynb  (+2 more)
notebooks/dmml-03_files/libs/bootstrap/: bootstrap-916cd754a3f1a71ffac47643ac518fe4.min.css  bootstrap-d5c0a7d331a92c253c21bc27dd112ea5.min.css
notebooks/dmml-hw-02_files/libs/bootstrap/: bootstrap-3fb89fd559c544a3aa8d65adba3e84d6.min.css
notebooks/partials/: dark-mode.scss  footer.html  styles.css
psets/: dmml-07.typ  dmml-12.typ
(+1 files in other folders)
