[project]
name = "dmml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "altair>=5.4.0",
    "dmml-contest>=0.1.2",
    "itables>=2.5.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = ["jupyter>=1.1.1"]

[tool.ruff]
line-length = 120
